--- a/index.html
+++ b/index.html
@@ -49,8 +49,10 @@
             <div class="container">
                 <div class="easy-wrap">
                     <div class="easy-left">
-                        <h4 class="easy-title">Want anything to be easy with <span class="easy-span">LaslesVPN.</span></h4>
-                        <p class="easy-text">Provide a network for all your needs with ease and fun using <span class="easy-text-span">LaslesVPN</span> discover interesting
+                        <h4 class="easy-title">Want anything to be easy with <span class="easy-span">LaslesVPN.</span>
+                        </h4>
+                        <p class="easy-text">Provide a network for all your needs with ease and fun using <span
+                                class="easy-text-span">LaslesVPN</span> discover interesting
                             features from us.
                         </p>
                         <div class="easy-btn-wrap">
@@ -59,11 +61,70 @@
                     </div>
                     <div class="easy-right">
                         <img src="img/easy-img.png" alt="">
-
                     </div>
                 </div>
             </div>
         </section>
+
+        <!--=============== LOCATION ===============-->
+
+        <section class="location">
+            <div class="container">
+                <div class="background">
+                    <div class="location-wrap">
+                        <div class="location-boxxer">
+                            <img class="location-img" src="img/svg/human-svg.svg" alt="">
+                            <div class="location-box">
+                                <h4 class="location-title">90+</h4>
+                                <p class="location-text">Users</p>
+                            </div>
+                            <img class="line-1" src="img/svg/line1.svg" alt="">
+                        </div>
+                        <div class="location-boxxer">
+                            <img class="location-img" src="img/svg/location-svg.svg" alt="">
+                            <div class="location-box">
+                                <h4 class="location-title">30+</h4>
+                                <p class="location-text">Locations</p>
+                            </div>
+                            <img class="line-1" src="img/svg/line1.svg" alt="">
+                        </div>
+                        <div class="location-boxxer">
+                            <img class="location-img" src="img/svg/katalog-svg.svg" alt="">
+                            <div class="location-box">
+                                <h4 class="location-title">50+</h4>
+                                <p class="location-text">Servers</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!--=============== PROVIDE ===============-->
+
+        <section class="provide">
+            <div class="container">
+                <div class="provide-wrap">
+                    <div class="provide-left">
+                        <img src="img/left-man.png" alt="">
+                    </div>
+                    <div class="provide-right">
+                        <h4 class="provide-title">We Provide Many Features You Can Use</h4>
+                        <p class="provide-text">You can explore the features that we provide with fun and have their own
+                            functions each feature.
+                        </p>
+                        <div class="provide-text-wrap">
+                            <p class="provide-second-text"><img src="img/svg/nice-svg.svg" alt="">Powerfull online protection.</p>
+                            <p class="provide-second-text"><img src="img/svg/nice-svg.svg" alt="">Internet without borders.</p>
+                            <p class="provide-second-text"><img src="img/svg/nice-svg.svg" alt="">Supercharged VPN</p>
+                            <p class="provide-second-text"><img src="img/svg/nice-svg.svg" alt="">No specific time limits.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+
 
     </main>
 
