--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 </head>
 
 <body>
+    <!--=============== HEADER ===============-->
+
     <header>
         <div class="container">
             <div class="header-nav">
@@ -43,8 +45,10 @@
         </div>
     </header>
     <!--=============== MAIN ===============-->
+
     <main>
         <!--=============== EASY ===============-->
+
         <section class="easy">
             <div class="container">
                 <div class="easy-wrap">
@@ -114,15 +118,83 @@
                             functions each feature.
                         </p>
                         <div class="provide-text-wrap">
-                            <p class="provide-second-text"><img src="img/svg/nice-svg.svg" alt="">Powerfull online protection.</p>
-                            <p class="provide-second-text"><img src="img/svg/nice-svg.svg" alt="">Internet without borders.</p>
+                            <p class="provide-second-text"><img src="img/svg/nice-svg.svg" alt="">Powerfull online
+                                protection.</p>
+                            <p class="provide-second-text"><img src="img/svg/nice-svg.svg" alt="">Internet without
+                                borders.</p>
                             <p class="provide-second-text"><img src="img/svg/nice-svg.svg" alt="">Supercharged VPN</p>
-                            <p class="provide-second-text"><img src="img/svg/nice-svg.svg" alt="">No specific time limits.</p>
+                            <p class="provide-second-text"><img src="img/svg/nice-svg.svg" alt="">No specific time
+                                limits.</p>
                         </div>
                     </div>
                 </div>
             </div>
+        </section>
 
+        <!--=============== PLAN ===============-->
+
+        <section class="plan">
+            <div class="container">
+                <div class="plan-title-wrap">
+                    <h4 class="plan-mian-title">Choose Your Plan</h4>
+                    <p class="plan-main-text">Let's choose the package that is best for you and explore it happily and <br>
+                        cheerfully.
+                    </p>
+                </div>
+                <div class="plan-wrapper">
+                    <div class="plan-wrap">
+                        <div class="plan-img">
+                            <img src="img/gift-1.png" alt="">
+                        </div>
+                        <h4 class="plan-title">Free Plan</h4>
+                        <div class="plan-text-wrap">
+                            <p class="plan-text"><img src="img/svg/qy-svg.svg" alt="">Unlimited Bandwitch</p>
+                            <p class="plan-text"><img src="img/svg/qy-svg.svg" alt="">Encrypted Connection</p>
+                            <p class="plan-text"><img src="img/svg/qy-svg.svg" alt="">No Traffic Logs</p>
+                            <p class="plan-text"><img src="img/svg/qy-svg.svg" alt="">Works on All Devices</p>
+                        </div>
+                        <div class="plan-btn-wrap">
+                            <h4 class="plan-title2">Free</h4>
+                            <button class="plan-btn">Select</button>
+                        </div>
+                    </div>
+                    <div class="plan-wrap">
+                        <div class="plan-img">
+                            <img src="img/gift-2.png" alt="">
+                        </div>
+                        <h4 class="plan-title">Standard Plan</h4>
+                        <div class="plan-text-wrap">
+                            <p class="plan-text"><img src="img/svg/qy-svg.svg" alt="">Unlimited Bandwitch</p>
+                            <p class="plan-text"><img src="img/svg/qy-svg.svg" alt="">Encrypted Connection</p>
+                            <p class="plan-text"><img src="img/svg/qy-svg.svg" alt="">Yes Traffic Logs</p>
+                            <p class="plan-text"><img src="img/svg/qy-svg.svg" alt="">Works on All Devices</p>
+                            <p class="plan-text"><img src="img/svg/qy-svg.svg" alt="">Connect Anyware</p>
+                        </div>
+                        <div class="plan-btn-wrap">
+                            <h4 class="plan-title2">$9 / mo</h4>
+                            <button class="plan-btn">Select</button>
+                        </div>
+                    </div>
+                    <div class="plan-wrap">
+                        <div class="plan-img">
+                            <img src="img/gift-3.png" alt="">
+                        </div>
+                        <h4 class="plan-title">Premium Plan</h4>
+                        <div class="plan-text-wrap">
+                            <p class="plan-text"><img src="img/svg/qy-svg.svg" alt="">Unlimited Bandwitch</p>
+                            <p class="plan-text"><img src="img/svg/qy-svg.svg" alt="">Encrypted Connection</p>
+                            <p class="plan-text"><img src="img/svg/qy-svg.svg" alt="">Yes Traffic Logs</p>
+                            <p class="plan-text"><img src="img/svg/qy-svg.svg" alt="">Works on All Devices</p>
+                            <p class="plan-text"><img src="img/svg/qy-svg.svg" alt="">Connect Anyware</p>
+                            <p class="plan-text"><img src="img/svg/qy-svg.svg" alt="">Get New Features</p>
+                        </div>
+                        <div class="plan-btn-wrap">
+                            <h4 class="plan-title2">$12 / mo</h4>
+                            <button class="plan-btn">Select</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
 
 
