--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--=============== DESCRIPTION ===============-->
-    <meta name="description" content="fast and safe internet 🤗">
+    <meta name="description" content=" use fast and safe internet 🤗">
 
     <!--=============== FAVICON ===============-->
     <link rel="shortcut icon" href="img/svg/main-logo.svg" type="image/x-icon">
