--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <!--=============== BOXICONS ===============-->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
+    <!--=============== SWIPER ===============-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+
     <!--=============== STYLES ===============-->
     <link rel="stylesheet" href="style/main.css">
     <link rel="stylesheet" href="style/breakpoints.css">
@@ -137,7 +140,8 @@
             <div class="container">
                 <div class="plan-title-wrap">
                     <h4 class="plan-mian-title">Choose Your Plan</h4>
-                    <p class="plan-main-text">Let's choose the package that is best for you and explore it happily and <br>
+                    <p class="plan-main-text">Let's choose the package that is best for you and explore it happily and
+                        <br>
                         cheerfully.
                     </p>
                 </div>
@@ -197,7 +201,222 @@
             </div>
         </section>
 
+        <!--=============== GLOBAL ===============-->
 
+        <section class="global">
+            <div class="container">
+                <div class="global-title-wrap">
+                    <h4 class="global-title">Huge Global Network <br> of Fast VPN</h4>
+                    <p class="global-text">See <span class="las-span">LaslesVPN</span> everywhere to make it easier for
+                        you when you move <br>
+                        locations.
+                    </p>
+                </div>
+                <div class="global-img">
+                    <img src="img/global-map.png" alt="#!">
+                </div>
+                <!-- Swiper -->
+                <!-- Swiper -->
+                <div class="swiper mySwiper">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <img src="img/svg/netflix.svg" alt="">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="img/reddit.png" alt="">
+
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="img/amazon.png" alt="">
+
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="img/discord.png" alt="">
+
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="img/spotify.png" alt="">
+
+                        </div>
+                    </div>
+                    <div class="swiper-pagination"></div>
+                </div>
+            </div>
+        </section>
+
+        <!--=============== TRUST ===============-->
+
+        <section class="trust">
+            <div class="container">
+                <div class="trust-title-wrap">
+                    <h4 class="trust-main-title">Trusted by Thousands of <br> Happy Customer</h4>
+                    <p class="trust-main-text">These are the stories of our customers who have joined us with great <br>
+                        pleasure when using this crazy feature.</p>
+                </div>
+                <div class="trust-wrapper">
+                    <div class="trust-wrap">
+                        <div class="trust-boxxer">
+                            <div class="trust-img">
+                                <img src="img/svg/trust1.svg" alt="">
+                            </div>
+                            <div class="trust-title-box">
+                                <h4 class="trust-title">Viezh Robert</h4>
+                                <p class="trust-text">Warsaw, Poland</p>
+                            </div>
+                            <div class="trust-rates">
+                                <p class="trust-rate">4.5<img src="img/svg/rate.svg" alt=""></p>
+                            </div>
+                        </div>
+                        <div class="trust-text-boxxer">
+                            <p class="trust-big-text">“Wow... I am very happy to use this VPN, it turned out to be more
+                                than my expectations
+                                and so far there have been no problems. LaslesVPN always the best”.</p>
+                        </div>
+                    </div>
+                    <div class="trust-wrap">
+                        <div class="trust-boxxer">
+                            <div class="trust-img">
+                                <img src="img/svg/trust2.svg" alt="">
+                            </div>
+                            <div class="trust-title-box">
+                                <h4 class="trust-title">Yessica Christy</h4>
+                                <p class="trust-text">Shanxi, China</p>
+                            </div>
+                            <div class="trust-rates">
+                                <p class="trust-rate">4.5<img src="img/svg/rate.svg" alt=""></p>
+                            </div>
+                        </div>
+
+                        <div class="trust-text-boxxer">
+                            <p class="trust-big-text">“I like it because I like to travel far and still can connect with
+                                high speed.”.</p>
+                        </div>
+                    </div>
+                    <div class="trust-wrap">
+                        <div class="trust-boxxer">
+                            <div class="trust-img">
+                                <img src="img/svg/trust3.svg" alt="">
+                            </div>
+                            <div class="trust-title-box">
+                                <h4 class="trust-title">Kim Young Jou</h4>
+                                <p class="trust-text">Seoul, South Korea</p>
+                            </div>
+                            <div class="trust-rates">
+                                <p class="trust-rate">4.5<img src="img/svg/rate.svg" alt=""></p>
+                            </div>
+                        </div>
+
+                        <div class="trust-text-boxxer">
+                            <p class="trust-big-text">“This is very unusual for my business that currently requires a
+                                virtual private network that has high security.”.</p>
+                        </div>
+                    </div>
+                </div>
+
+
+                <!-- Swiper -->
+                <div class="swiper mySwiper">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">Slide 1</div>
+                    </div>
+
+                    <div style="border-radius: 16px 0 0 0;width: 132px; height: 60px;"
+                        class="d-flex z-1 align-items-center justify-content-center bg-white rounded-top-right-1 position-absolute end-0 bottom-0">
+                        <div class="swiper-button-next" style="top: 38px;">
+                            <i class='bx bx-chevron-right'></i>
+                        </div>
+                        <div class="swiper-button-prev" style="top: 38px; left: 38px;">
+                            <i class='bx bx-chevron-left'></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="subs">
+            <div class="container">
+                <div class="subs-back">
+                    <div class="subs-wrap">
+                        <div class="subs-text-box">
+                            <h4 class="subs-title">Subscribe Now for Get Special Features!</h4>
+                            <p class="subs-text">Let's subscribe with us and find the fun.</p>
+                        </div>
+                        <div class="subs-btn-wrap">
+                            <button class="subs-btn" type="button">Subscribe Now</button>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+        </section>
+
+        <footer class="footer">
+            <div class="container">
+                <div class="footer-wrapper">
+                    <div class="footer-boxxer">
+                        <div class="footer-logo-wrap">
+                            <img src="img/site-logo.png" alt="">
+                        </div>
+                        <div class="">
+                            <p class="footer-text"><span class="footer-span">LaslesVPN</span> is a private virtual network that has unique features and
+                                has high security.
+                            </p>
+                        </div>
+                        <div class="footer-img-wrap">
+                            <img src="img/svg/footer-logo1.svg" alt="#!">
+                            <img src="img/svg/footer-logo2.svg" alt="#!">
+                            <img src="img/svg/footer-logo3.svg" alt="#!">
+                        </div>
+                        <p class="footer-gm">©2020Lasles<span class="footer-span2">VPN</span></p>
+                    </div>
+                    <nav class="footer-nav">
+                        <h5 class="footer-title">Product</h5>
+                        <ul class="foooter-list">
+                            <li class="footer-item"><a href="#!" class="footer-link">Download </a></li>
+                            <li class="footer-item"><a href="#!" class="footer-link">Pricing</a></li>
+                            <li class="footer-item"><a href="#!" class="footer-link">Locations</a></li>
+                            <li class="footer-item"><a href="#!" class="footer-link">Server</a></li>
+                            <li class="footer-item"><a href="#!" class="footer-link">Countries</a></li>
+                            <li class="footer-item"><a href="#1" class="footer-link">Blog</a></li>
+
+                        </ul>
+                    </nav>
+                    
+                    <nav class="footer-nav">
+                        <h5 class="footer-title">Engage</h5>
+                        <ul class="foooter-list">
+                            <li class="footer-item"><a href="#!" class="footer-link">LaslesVPN ? </a></li>
+                            <li class="footer-item"><a href="#!" class="footer-link">FAQ</a></li>
+                            <li class="footer-item"><a href="#!" class="footer-link">Tutorials</a></li>
+                            <li class="footer-item"><a href="#!" class="footer-link">About Us</a></li>
+                            <li class="footer-item"><a href="#!" class="footer-link">Privacy Policy</a></li>
+                            <li class="footer-item"><a href="#1" class="footer-link">Terms of Service</a></li>
+
+                        </ul>
+                    </nav>
+                    
+                    <nav class="footer-nav">
+                        <h5 class="footer-title">Earn Money</h5>
+                        <ul class="foooter-list">
+                            <li class="footer-item"><a href="#!" class="footer-link">Affiliate</a></li>
+                            <li class="footer-item"><a href="#!" class="footer-link">Become Partner</a></li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+
+        </footer>
+
+
+
+
+
+
+
+
+        <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+        <script src="scripts/main.js"></script>
     </main>
 
 </body>
