--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                 </div>
                 <!-- Swiper -->
                 <!-- Swiper -->
-                <div class="swiper mySwiper">
+                <div class="swiper partnerSwiper">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
                             <img src="img/svg/netflix.svg" alt="">
@@ -239,7 +239,6 @@
 
                         </div>
                     </div>
-                    <div class="swiper-pagination"></div>
                 </div>
             </div>
         </section>
@@ -253,83 +252,112 @@
                     <p class="trust-main-text">These are the stories of our customers who have joined us with great <br>
                         pleasure when using this crazy feature.</p>
                 </div>
-                <div class="trust-wrapper">
-                    <div class="trust-wrap">
-                        <div class="trust-boxxer">
-                            <div class="trust-img">
-                                <img src="img/svg/trust1.svg" alt="">
-                            </div>
-                            <div class="trust-title-box">
-                                <h4 class="trust-title">Viezh Robert</h4>
-                                <p class="trust-text">Warsaw, Poland</p>
-                            </div>
-                            <div class="trust-rates">
-                                <p class="trust-rate">4.5<img src="img/svg/rate.svg" alt=""></p>
-                            </div>
-                        </div>
-                        <div class="trust-text-boxxer">
-                            <p class="trust-big-text">“Wow... I am very happy to use this VPN, it turned out to be more
-                                than my expectations
-                                and so far there have been no problems. LaslesVPN always the best”.</p>
-                        </div>
-                    </div>
-                    <div class="trust-wrap">
-                        <div class="trust-boxxer">
-                            <div class="trust-img">
-                                <img src="img/svg/trust2.svg" alt="">
-                            </div>
-                            <div class="trust-title-box">
-                                <h4 class="trust-title">Yessica Christy</h4>
-                                <p class="trust-text">Shanxi, China</p>
-                            </div>
-                            <div class="trust-rates">
-                                <p class="trust-rate">4.5<img src="img/svg/rate.svg" alt=""></p>
-                            </div>
-                        </div>
-
-                        <div class="trust-text-boxxer">
-                            <p class="trust-big-text">“I like it because I like to travel far and still can connect with
-                                high speed.”.</p>
-                        </div>
-                    </div>
-                    <div class="trust-wrap">
-                        <div class="trust-boxxer">
-                            <div class="trust-img">
-                                <img src="img/svg/trust3.svg" alt="">
-                            </div>
-                            <div class="trust-title-box">
-                                <h4 class="trust-title">Kim Young Jou</h4>
-                                <p class="trust-text">Seoul, South Korea</p>
-                            </div>
-                            <div class="trust-rates">
-                                <p class="trust-rate">4.5<img src="img/svg/rate.svg" alt=""></p>
-                            </div>
-                        </div>
-
-                        <div class="trust-text-boxxer">
-                            <p class="trust-big-text">“This is very unusual for my business that currently requires a
-                                virtual private network that has high security.”.</p>
-                        </div>
-                    </div>
-                </div>
 
 
                 <!-- Swiper -->
-                <div class="swiper mySwiper">
+                <div class="swiper commentSwiper">
                     <div class="swiper-wrapper">
-                        <div class="swiper-slide">Slide 1</div>
-                    </div>
+                        <div class="swiper-slide">
+                            <div class="trust-wrap">
+                                <div class="trust-boxxer">
+                                    <div class="trust-img">
+                                        <img src="img/svg/trust1.svg" alt="">
+                                    </div>
+                                    <div class="trust-title-box">
+                                        <h4 class="trust-title">Viezh Robert</h4>
+                                        <p class="trust-text">Warsaw, Poland</p>
+                                    </div>
+                                    <div class="trust-rates">
+                                        <p class="trust-rate">4.5<img src="img/svg/rate.svg" alt=""></p>
+                                    </div>
+                                </div>
+                                <div class="trust-text-boxxer">
+                                    <p class="trust-big-text">“Wow... I am very happy to use this VPN, it turned out to
+                                        be more
+                                        than my expectations
+                                        and so far there have been no problems. LaslesVPN always the best”.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="trust-wrap">
+                                <div class="trust-boxxer">
+                                    <div class="trust-img">
+                                        <img src="img/svg/trust2.svg" alt="">
+                                    </div>
+                                    <div class="trust-title-box">
+                                        <h4 class="trust-title">Yessica Christy</h4>
+                                        <p class="trust-text">Shanxi, China</p>
+                                    </div>
+                                    <div class="trust-rates">
+                                        <p class="trust-rate">4.5<img src="img/svg/rate.svg" alt=""></p>
+                                    </div>
+                                </div>
 
-                    <div style="border-radius: 16px 0 0 0;width: 132px; height: 60px;"
-                        class="d-flex z-1 align-items-center justify-content-center bg-white rounded-top-right-1 position-absolute end-0 bottom-0">
-                        <div class="swiper-button-next" style="top: 38px;">
-                            <i class='bx bx-chevron-right'></i>
+                                <div class="trust-text-boxxer">
+                                    <p class="trust-big-text">“I like it because I like to travel far and still can
+                                        connect with
+                                        high speed.”.</p>
+                                </div>
+                            </div>
                         </div>
-                        <div class="swiper-button-prev" style="top: 38px; left: 38px;">
-                            <i class='bx bx-chevron-left'></i>
+                        <div class="swiper-slide">
+                            <div class="trust-wrap">
+                                <div class="trust-boxxer">
+                                    <div class="trust-img">
+                                        <img src="img/svg/trust3.svg" alt="">
+                                    </div>
+                                    <div class="trust-title-box">
+                                        <h4 class="trust-title">Kim Young Jou</h4>
+                                        <p class="trust-text">Seoul, South Korea</p>
+                                    </div>
+                                    <div class="trust-rates">
+                                        <p class="trust-rate">4.5<img src="img/svg/rate.svg" alt=""></p>
+                                    </div>
+                                </div>
+
+                                <div class="trust-text-boxxer">
+                                    <p class="trust-big-text">“This is very unusual for my business that currently
+                                        requires a
+                                        virtual private network that has high security.”.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="trust-wrap">
+                                <div class="trust-boxxer">
+                                    <div class="trust-img">
+                                        <img src="img/svg/trust3.svg" alt="">
+                                    </div>
+                                    <div class="trust-title-box">
+                                        <h4 class="trust-title">Kim Young Jou</h4>
+                                        <p class="trust-text">Seoul, South Korea</p>
+                                    </div>
+                                    <div class="trust-rates">
+                                        <p class="trust-rate">4.5<img src="img/svg/rate.svg" alt=""></p>
+                                    </div>
+                                </div>
+                                <div class="trust-text-boxxer">
+                                    <p class="trust-big-text">“This is very unusual for my business that currently
+                                        requires a
+                                        virtual private network that has high security.”.</p>
+                                </div>
+                            </div>
                         </div>
                     </div>
+                    <div class="swiper-button-next">
+                        <div class="trust-arrov">
+                            <i class='bx bx-right-arrow-alt'></i>
+                        </div>
+                    </div>
+                    <div class="swiper-button-prev">
+                        <div class="trust-arrovv">
+                            <i class='bx bx-left-arrow-alt'></i>
+                        </div>
+                    </div>
+                    <div class="swiper-pagination"></div>
                 </div>
+
             </div>
         </section>
 
@@ -359,7 +387,8 @@
                             <img src="img/site-logo.png" alt="">
                         </div>
                         <div class="">
-                            <p class="footer-text"><span class="footer-span">LaslesVPN</span> is a private virtual network that has unique features and
+                            <p class="footer-text"><span class="footer-span">LaslesVPN</span> is a private virtual
+                                network that has unique features and
                                 has high security.
                             </p>
                         </div>
@@ -382,7 +411,7 @@
 
                         </ul>
                     </nav>
-                    
+
                     <nav class="footer-nav">
                         <h5 class="footer-title">Engage</h5>
                         <ul class="foooter-list">
@@ -395,7 +424,7 @@
 
                         </ul>
                     </nav>
-                    
+
                     <nav class="footer-nav">
                         <h5 class="footer-title">Earn Money</h5>
                         <ul class="foooter-list">
